# rqrs

./: Cargo.toml  README.md
examples/: reqres.rs  ya-ai-adapter.rs  ya-ai.rs
src/: adapter.rs  ai.rs  api.rs  lib.rs  prelude.rs
src/adapter/: yandex.rs
src/ai/: ycloudml.rs
src/ai/ycloudml/: complition.rs  image.rs  speechkit.rs
