[package]
name = "rqrs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
regex = "1.11.1"
uuid = { version = "1.17.0", features = ["v4"] }
rand = "0.9.2"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
anyhow = "1.0"
color-eyre = "0.6.5"
dotenv = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.43", features = ["derive"] }
tera = "1.20.0"
moka = { version = "0.12.10", features = ["future"] }
url = "2.5.4"
evalexpr = "12.0.2"
zeromq = "0.4.1"
bytes = "1.10.1"
tempfile = "3.20.0"
reqwest = { version = "0.12.22", features = ["rustls-tls", "json"] }
sha2 = "0.10.9"
hex = "0.4.3"
bincode = { version = "2.0.1", features = ["serde"] }
