[package]
name = "rqrs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.22", features = ["rustls-tls", "json"] }
base64 = "0.22.1"
